Some setup and working version

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/litepicker/dist/litepicker.js' %>
+    <%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/litepicker/dist/plugins/multiselect.js' %>
   </head>
 
   <body>
