Remove form and do small refactor

--- a/app/views/date_ranges/calendar.html.erb
+++ b/app/views/date_ranges/calendar.html.erb
@@ -1,20 +1,6 @@
-<div data-controller="hello" data-hello-request="<%= current_user.email + "@#{Rails.configuration.app_name}" %>">
+<div data-controller="hello" data-hello-request="<%= current_user.email + "@#{Rails.configuration.app_name}" %>" data-hello-appname="<%= Rails.configuration.app_name %>">
   <div id="datepicker"/>
-  <%= form_with(model: @date_range) do |form| %>
-    <div style='display: none;'>
-      <%= form.text_field :start_date, { id: 'startDate' } %>
-    </div>
 
-    <div style='display: none;'>
-      <%= form.text_field :end_date, { id: 'endDate' } %>
-    </div>
 
-    <div style='display: none;'>
-      <%= form.text_field :created_by, value:  Rails.configuration.app_name %>
-    </div>
-
-    <div>
-      <%= form.submit %>
-    </div>
-  <% end %>
+  <input type="button" value="Submit" data-action="click->hello#createDateRangeBlock"/>
 </div>
